--- a/src/Web/BackendBundle/Resources/translations/messages.en.yml
+++ b/src/Web/BackendBundle/Resources/translations/messages.en.yml
@@ -2,6 +2,9 @@ backend:
     crumbs:
         home: Home
         contact: Contacts
+        sharing: Sharing Files
+        user:
+            contract: Account Information & Contract
     home:
         bigTile:  Makoto Office Home Page
         bigDescription:  Fast links to clients , company , project , invoice etc.
@@ -17,7 +20,6 @@ backend:
         listDescription: All contacts of yours
         find: Find My Contacts
         trash: The Removed Contacts
-
         contactName: Contact's Name
         fromCompany: Contact's Company
         email: Contact's Email
@@ -28,3 +30,24 @@ backend:
         contactsActivity: Contact's Activities
         newsfeed: Contact's Newsfeed
         relatedProjectsList: Contact's Related Projects List
+    user:
+        contract:
+            bigTile: Review account information & Upload contracts
+            bigDescription: Review my bank account and upload/download contracts
+            myAccountInfo: Account Information
+            chineseName: Chinese Name
+            englishName: English/Japanese Name
+            idCard: ID Card
+            homeTown: Home Town
+            liveAddress: Current Address
+            phoneNumber: Phone Number
+            mobileNumber: Mobile Phone Number
+            privateEmail: Private Email
+            companyEmail: Company Email
+            bankAccount: Bank Account
+            currency: Currency
+            language: Language
+            contractUpload: Upload and Download Contracts
+    sharing:
+        bigTitle: Sharing Files & Downloading
+        bigDescription: Mot loves sharing
