add avatar function

--- a/src/Web/BackendBundle/Resources/translations/messages.en.yml
+++ b/src/Web/BackendBundle/Resources/translations/messages.en.yml
@@ -58,3 +58,5 @@ backend:
         create: Create New Client
         find: Find Client
         trash: Trash Box
+    inbox:
+        sendMessage: Send Message
